tests/paczka1/small_fuzzy/75785845.err
Error in line 3: ACvGDWj A179 2,1
Error in line 11: DxmBjpjY5S A55 40,6
Error in line 13: A55 A686 94,7
